Fix some scroll edge cases
Very long content could cause vertically centered text to cut off the
page. By using `auto` margins, we can get around this issue with
`justify-content: center`.

I also noticed that scroll wasn't updating for very long pages, so I
added a reset scroll handler.

Related to:

https://github.com/vigetlabs/storyboard/issues/49

--- a/app/javascript/src/components/Player.css
+++ b/app/javascript/src/components/Player.css
@@ -3,6 +3,7 @@
  */
 
 .Player {
+  display: flex;
   height: 100%;
 }
 
@@ -20,8 +21,9 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  justify-content: center;
+  flex-grow: 1;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .PlayerChoices {
